<resources>
    <string name="app_name">Workout Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fab_description">add new workout</string>
    <string name="workout_creation_activity_top_title">Construtor de Treino</string>
    <string name="spinner_content_description">dia da semana</string>
    <string name="calculadora_de_gordura_corporal">Calculadora de gordura corporal</string>
    <string name="homem">Homem</string>
    <string name="mulher">Mulher</string>
    <string name="calcular">Calcular!</string>
    <string name="calculadora_de_imc">Calculadora de IMC</string>
    <string name="abrir">Abrir!</string>
    <string name="digite_seu_peso">Digite seu peso</string>
    <string name="digite_sua_altura">Digite sua altura</string>
    <string name="peso_obrigatorio_erro">Peso é obrigatório</string>
    <string name="altura_obrigatório_erro">Altura é obrigatório</string>
    <string name="seu_imc_prefixo">Seu IMC é:</string>
    <string name="segundo_a_oms_seu_imc_est">Segundo a OMS, seu IMC está:</string>
    <string name="under_weight">Abaixo do peso</string>
    <string name="normal_weight">Peso normal</string>
    <string name="overweight">Sobrepeso</string>
    <string name="obesity_I">Obesidade grau 1</string>
    <string name="obesity_II">Obesidade grau 2</string>
    <string name="obesity_III">Obesidade grau 3</string>
    <string name="ops_error_ocurred">Ops, algum erro ocorreu!</string>
    <string name="tool_explain">Essa ferramenta dá apenas uma estimativa, e apesar de na maioria das vezes ter resultados muito fiéis a realidade, não substitui avaliação física.</string>
    <string name="se_all_measures">See all measures</string>
    <string name="app_icon_content_description">app icon</string>
    <string name="google_sign_in_content_description">google_sign_in</string>
    <string name="anonymous_icon_content_description">anonymous_icon</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>