<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CalculateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.google.android.material.textview.MaterialTextView
            style="@style/Theme.WorkoutPlanner"
            android:id="@+id/bf_calculator_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculadora_de_gordura_corporal"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bf_calculator_title"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/men_selected_button"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/homem"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/women_selected_button"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/mulher"
                android:textSize="16sp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_calculate_bf"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/calcular"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggle_group" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_calculate_bf" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Theme.WorkoutPlanner"
            android:id="@+id/imc_calculator_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calculadora_de_imc"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_calculate_imc"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/abrir"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imc_calculator_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>